--- a/VaccineC/src/app/modules/home/home.component.scss
+++ b/VaccineC/src/app/modules/home/home.component.scss
@@ -1,9 +1,9 @@
-.toolbar {
-  background-color: #1976d2;
-  align: center center;
-  height: 80px;
-  color: white;
-}
+// .toolbar {
+//   background-color: #1976d2;
+//   align: center center;
+//   height: 80px;
+//   color: white;
+// }
 
 .side {
   background-color: aqua;
