--- a/VaccineC/src/styles.scss
+++ b/VaccineC/src/styles.scss
@@ -2,3 +2,9 @@
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+.menu{
+  background-color: rgb(170, 161, 161);
+  height: 100%;
+  width: 100%;
+ }
