--- a/VaccineC/src/app/modules/home/home-toolbar/home-toolbar.component.html
+++ b/VaccineC/src/app/modules/home/home-toolbar/home-toolbar.component.html
@@ -1,25 +1,18 @@
 <p>
-  <mat-toolbar>
-    <span>VaccineC</span>
-  </mat-toolbar>
-</p>
-<p>
-  <mat-toolbar class="background-toolbar">
-    <button mat-icon-button color="accent" aria-label="Example icon button with a menu icon">
+    <mat-toolbar>
+      <span>My Application</span>
+    </mat-toolbar>
+    <mat-toolbar>
+     <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon">
       <mat-icon>menu</mat-icon>
     </button>
-
     <span>My App</span>
     <span class="example-spacer"></span>
-    <button mat-icon-button
-            class="example-icon favorite-icon"
-            aria-label="Example icon-button with heart icon">
+    <button mat-icon-button class="example-icon favorite-icon" aria-label="Example icon-button with heart icon">
       <mat-icon>favorite</mat-icon>
     </button>
-    <button mat-icon-button
-            class="example-icon"
-            aria-label="Example icon-button with share icon">
-      <mat-icon>share</mat-icon>
-    </button>
+    <button mat-icon-button class="example-icon" aria-label="Example icon-button with share icon">
+     <mat-icon>share</mat-icon>
+   </button>
   </mat-toolbar>
-</p>
+  </p>
