--- a/VaccineC/src/app/modules/home/home.component.scss
+++ b/VaccineC/src/app/modules/home/home.component.scss
@@ -1,10 +1,3 @@
-// .toolbar {
-//   background-color: #1976d2;
-//   align: center center;
-//   height: 80px;
-//   color: white;
-// }
-
 .side {
   background-color: aqua;
 }
@@ -14,3 +7,6 @@
   background-color: black;
 }
 
+.button-layout{
+  border-radius: 15px;
+}
