--- a/VaccineC/src/app/modules/home/home.component.html
+++ b/VaccineC/src/app/modules/home/home.component.html
@@ -1,1 +1,9 @@
-<home-toolbar-component></home-toolbar-component>
+<home-toolbar-component>
+
+</home-toolbar-component>
+<home-side-menu-component >
+  <!-- *ngIf="sideIsOpened" -->
+</home-side-menu-component>
+<home-dashboard-component>
+
+</home-dashboard-component>
