--- a/VaccineC/src/app/modules/home/home-dashboard/home-dashboard.component.scss
+++ b/VaccineC/src/app/modules/home/home-dashboard/home-dashboard.component.scss
@@ -1,4 +1,5 @@
 .dashboard {
-  background-color: aquamarine;
-  height: 100%;
+  background-color: rgb(0, 1, 0);
+  height: 93%;
+  width: 350px;
 }
