--- a/VaccineC/src/app/modules/home/home-toolbar/home-toolbar.component.html
+++ b/VaccineC/src/app/modules/home/home-toolbar/home-toolbar.component.html
@@ -1,17 +1,11 @@
-<p>
-  <mat-toolbar>
-    <button mat-icon-button
-            class="example-icon">
-      <mat-icon>menu</mat-icon>
-    </button>
-    <span class="example-spacer"> Seja bem vindo ao VaccineC!</span>
-    <button mat-icon-button
-            class="example-icon favorite-icon">
-      <mat-icon>favorite</mat-icon>
-    </button>
-    <button mat-icon-button
-            class="example-icon">
-      <mat-icon>share</mat-icon>
-    </button>
-  </mat-toolbar>
-</p>
+<div flex>
+    <mat-toolbar>
+      <button mat-icon-button
+              class="example-icon"
+              (click)="openSideNav()">
+        <mat-icon>menu</mat-icon>
+      </button>
+      <span class="example-spacer"> Seja bem vindo ao VaccineC!</span>
+
+    </mat-toolbar>
+</div>
