alterações visuais - criação do side menu e topbar

--- a/VaccineC/src/app/modules/home/home-side-menu/home-side-menu.component.scss
+++ b/VaccineC/src/app/modules/home/home-side-menu/home-side-menu.component.scss
@@ -1,12 +1,8 @@
-.side {
-  position: fixed;
-  top: 10;
-  left: 0;
-  right: 0;
-  height: 90px;
-  display: flex;
-  align-items: center;
-  color: white;
-  font-weight: 600;
-  background-color: aqua;
+#accordionSidebar {
+  border-top-right-radius: 1rem;
+  border-bottom-right-radius: 1rem;
+}
+
+.resource-icon {
+  margin-right: 0.5rem !important;
 }
