--- a/VaccineC/src/app/modules/home/home.component.html
+++ b/VaccineC/src/app/modules/home/home.component.html
@@ -1,9 +1,7 @@
-<home-toolbar-component>
-
-</home-toolbar-component>
-<home-side-menu-component >
-  <!-- *ngIf="sideIsOpened" -->
-</home-side-menu-component>
-<home-dashboard-component>
-
-</home-dashboard-component>
+<div class="d-flex">
+    <home-side-menu-component></home-side-menu-component>
+    <div id="content-wrapper" class="d-flex flex-column">
+        <home-toolbar-component></home-toolbar-component>
+        <home-dashboard-component></home-dashboard-component>
+    </div>
+</div>
