--- a/VaccineC/src/styles.scss
+++ b/VaccineC/src/styles.scss
@@ -1,10 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
+@import '~bootstrap/dist/css/bootstrap.min.css';
+@import '~font-awesome/css/font-awesome.min.css';
+@import 'app/styles/css/style-global.min.css';
+@import 'app/styles/css/style-global.css';
 
 html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
-
-.menu{
-  background-color: rgb(176, 174, 174);
-  height: 100%;
-  width: 100%;
- }
+body { margin: 0; font-family: Nunito,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji" !important; }
