--- a/VaccineC/src/app/modules/home/home-side-menu/home-side-menu.component.scss
+++ b/VaccineC/src/app/modules/home/home-side-menu/home-side-menu.component.scss
@@ -6,3 +6,21 @@
 .resource-icon {
   margin-right: 0.5rem !important;
 }
+
+.is-handle-expanded {
+  position: fixed;
+  top: 0.8em;
+  z-index: 40;
+  border-radius: 50%;
+  background-color: #5099dd;
+  width: 3em;
+  height: 3em;
+  display: flex;
+  color: #fff;
+  align-items: center;
+  justify-content: center;
+  left: calc(15.25em - 1em);
+  box-shadow: 0 0.375rem 0.75rem rgb(140 152 164 / 13%);
+  cursor: pointer;
+  transition: background 0.2s, left 0.3s;
+}
