--- a/VaccineC/src/app/modules/general/general-side-menu/general-side-menu.component.html
+++ b/VaccineC/src/app/modules/general/general-side-menu/general-side-menu.component.html
@@ -18,7 +18,8 @@
 
     <!-- Nav Item - Pages Collapse Menu -->
     <li class="nav-item active">
-        <a class="nav-link" href="#" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="true" aria-controls="collapseTwo">
+        <a class="nav-link" href="#" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="true"
+            aria-controls="collapseTwo">
             <i class="fas fa-fw fa-address-card resource-icon"></i>
             <span>CADASTROS</span>
         </a>
@@ -31,7 +32,8 @@
     </li>
 
     <li class="nav-item">
-        <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseUtilities" aria-expanded="true" aria-controls="collapseUtilities">
+        <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseUtilities"
+            aria-expanded="true" aria-controls="collapseUtilities">
             <i class="fas fa-fw fa-hand-holding-medical resource-icon"></i>
             <span>OPERACIONAL</span>
         </a>
@@ -47,7 +49,8 @@
     </li>
 
     <li class="nav-item">
-        <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseUtilities" aria-expanded="true" aria-controls="collapseUtilities">
+        <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseUtilities"
+            aria-expanded="true" aria-controls="collapseUtilities">
             <i class="fas fa-fw fa-box-open resource-icon"></i>
             <span>ESTOQUE</span>
         </a>
@@ -63,7 +66,8 @@
     </li>
 
     <li class="nav-item">
-        <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseUtilities" aria-expanded="true" aria-controls="collapseUtilities">
+        <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseUtilities"
+            aria-expanded="true" aria-controls="collapseUtilities">
             <i class="fas fa-fw fa-users resource-icon"></i>
             <span>USUÁRIOS</span>
         </a>
@@ -83,5 +87,5 @@
 
 </ul>
 <div class="is-handle-expanded">
-    <span class="is-icon-type-expanded fas fa-chevron-right"></span>
+    <span class="is-icon-type-expanded fas fa-chevron-left"></span>
 </div>
