--- a/VaccineC/src/styles.scss
+++ b/VaccineC/src/styles.scss
@@ -4,5 +4,12 @@
 @import 'app/styles/css/style-global.min.css';
 @import 'app/styles/css/style-global.css';
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Nunito,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji" !important; }
+html,
+body {
+    height: 100%;
+}
+
+body {
+    margin: 0;
+    font-family: Nunito, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji" !important;
+}
