--- a/VaccineC/src/app/styles/css/style-global.css
+++ b/VaccineC/src/app/styles/css/style-global.css
@@ -12609,3 +12609,26 @@ footer.sticky-footer .copyright {
 body.sidebar-toggled footer.sticky-footer {
   width: 100%;
 }
+
+.h-100 {
+  height: 100%;
+}
+
+#content-wrapper {
+  background-color: #f8f9fc;
+  width: 100%;
+  overflow-x: hidden;
+}
+
+#center {
+  background-color: #FAFAFA !important;
+}
+
+.section-main {
+  display: flex;
+  flex-direction: column;
+  flex: 1;
+  margin-left: 14.5rem;
+  transition: margin 0.3s;
+  min-height: 100vh;
+}
