--- a/VaccineC/src/app/pages/login/login.component.html
+++ b/VaccineC/src/app/pages/login/login.component.html
@@ -1,1 +1,56 @@
-<p>login works!</p>
+<div class="d-flex">
+    <div id="content-wrapper" class="d-flex flex-column">
+        <section id="center" class="section-login-main">
+            <div class="flex-1 is-content">
+                <div class="is-section-content">
+                    <div class="is-card is-card-default-content shadow-lg o-hidden">
+                        <div class="is-card-body p-0">
+                            <div class="row h-100">
+                                <img class="col-lg-8 d-none d-lg-block" src="../../../assets/img/login-bg-pic.png">
+                                <div class="col-lg-4">
+                                    <div class="p-5">
+                                        <div class="row mb-5 d-flex justify-content-center">
+                                            <img src="../../../assets/img/logo-vaccine-c_preto.png"
+                                                style="height: 35px;width: 190px;" class="mb-3">
+                                            <div class="subtitle text-center">Saúde Modernizada</div>
+                                        </div>
+                                        <div class="form-group">
+                                            <div class="custom-control custom-checkbox small">
+                                                <input type="checkbox" class="custom-control-input" id="customCheck">
+                                            </div>
+                                        </div>
+                                        <form class="user">
+                                            <div class="form-group">
+                                                <input type="email" class="form-control form-control-user"
+                                                    id="exampleInputEmail" aria-describedby="emailHelp"
+                                                    placeholder="Digite seu e-mail">
+                                            </div>
+                                            <div class="form-group">
+                                                <input type="password" class="form-control form-control-user"
+                                                    id="exampleInputPassword" placeholder="Digite sua senha">
+                                            </div>
+                                            <div class="form-group">
+                                                <div class="custom-control custom-checkbox small">
+                                                    <input type="checkbox" class="custom-control-input"
+                                                        id="customCheck">
+                                                </div>
+                                            </div>
+                                            <a href="index.html" class="btn btn-primary btn-user btn-block">
+                                                ENTRAR
+                                            </a>
+
+                                        </form>
+                                        <div class="mt-2" style="float:right;">
+                                            <a class="small" href="forgot-password.html">Recuperar Senha</a>
+                                        </div>
+
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </div>
+</div>
