--- a/VaccineC/src/app/shared/components/side-menu/side-menu.component.html
+++ b/VaccineC/src/app/shared/components/side-menu/side-menu.component.html
@@ -1,11 +1,11 @@
 <ul class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion" id="accordionSidebar">
 
     <!-- Sidebar - Brand -->
-    <a class="sidebar-brand d-flex align-items-center justify-content-center" href="#">
-        <div class="sidebar-brand-icon rotate-n-15">
-            <i class="fas fa-laugh-wink"></i>
+    <a class="sidebar-brand d-flex align-items-center" href="#">
+        <div class="sidebar-brand-icon o-hidden">
+            <img id="logo" src="../../../assets/img/menu-expanded-logo.png"
+            style="height: 70px;width: 125px;margin-left: 1.5rem;">
         </div>
-        <div class="sidebar-brand-text mx-3">VACCINEC</div>
     </a>
 
     <!-- Divider -->
