--- a/VaccineC/src/app/shared/components/container/container.component.html
+++ b/VaccineC/src/app/shared/components/container/container.component.html
@@ -1,15 +1,18 @@
-<div class="flex-1 is-content h-100">
-    <div class="is-section-datail-header">
-        <div class="d-flex is-container-header-section">
-            <h1 class="is-section-detail-header-title" id="title">Título</h1>
-            <div class="is-path-page" title="Caminho no Sistema">( Caminho / Caminho )</div>
+<section id="center" class="section-main">
+    <div class="flex-1 is-content">
+        <div class="is-section-datail-header">
+            <div class="d-flex is-container-header-section">
+                <h1 class="is-section-detail-header-title" id="title">Título</h1>
+                <div class="is-path-page" title="Caminho no Sistema">( Caminho / Caminho )</div>
+            </div>
         </div>
-    </div>
-    <div class="is-section-content">
-        <div class="is-card is-card-default-content">
-            <div class="is-card-body">
+        <div class="is-section-content">
+            <div class="is-card is-card-default-content">
+                <div class="is-card-body">
 
+                </div>
             </div>
         </div>
     </div>
-</div>
+    <app-footer></app-footer>
+</section>
