--- a/VaccineC/src/app/shared/components/side-menu/side-menu.component.scss
+++ b/VaccineC/src/app/shared/components/side-menu/side-menu.component.scss
@@ -4,13 +4,14 @@
     position: fixed;
     z-index: 20;
     transition: width 0.3s;
-  }
-  
-  .resource-icon {
+    box-shadow: 0 0.375rem 0.75rem rgb(140 152 164 / 60%);
+}
+
+.resource-icon {
     margin-right: 0.5rem !important;
-  }
-  
-  .is-handle-expanded {
+}
+
+.is-handle-expanded {
     position: fixed;
     top: 0.8em;
     z-index: 40;
@@ -22,21 +23,30 @@
     color: #fff;
     align-items: center;
     justify-content: center;
-    left: calc(15.25em - 1em);
+    left: calc(13.25em - 1em);
     box-shadow: 0 0.375rem 0.75rem rgb(140 152 164 / 13%);
     cursor: pointer;
     transition: background 0.2s, left 0.3s;
-  }
-  
-  @media (max-width: 1366px) {
+}
+
+@media (max-width: 1366px) {
     .is-handle-expanded {
-      top: 0.4em;
+        top: 0.4em;
     }
-  }
-  
-  @media (max-width: 768px) {
+}
+
+@media (max-width: 768px) {
     .is-handle-expanded {
-      top: 0.4em;
-      left: 6.25em;
+        top: 0.4em;
+        left: 5.25em;
     }
-  }
+}
+
+@media (max-width: 768px) {
+    #logo {
+        content: url(../../../../assets/img/menu-logo.png);
+        height: 35px !important;
+        width: 30px !important;
+        margin-left: 1rem !important;
+    }
+}
