--- a/VaccineC/src/styles.scss
+++ b/VaccineC/src/styles.scss
@@ -7,9 +7,14 @@
 html,
 body {
     height: 100%;
+    background-color: #FAFAFA;
 }
 
 body {
     margin: 0;
     font-family: Nunito, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji" !important;
+}
+
+:host {
+    height: 100%
 }
