Alterações visuais no side menu

--- a/VaccineC/src/app/pages/forgot-password/forgot-password.component.html
+++ b/VaccineC/src/app/pages/forgot-password/forgot-password.component.html
@@ -10,9 +10,8 @@
                                 <div class="col-lg-4">
                                     <div class="p-5">
                                         <div class="row mb-5 d-flex justify-content-center">
-                                            <img src="../../../assets/img/logo-vaccine-c_preto.png"
-                                                style="height: 35px;width: 190px;" class="mb-3">
-                                            <div class="subtitle text-center">Saúde Modernizada</div>
+                                            <h1 class="h4 mb-3 text-center">Esqueceu sua senha?</h1>
+                                            <div class="subtitle">Nós entendemos, isso acontece! Informe seu e-mail abaixo para receber um link de redefinição de senha.</div>
                                         </div>
                                         <div class="form-group">
                                             <div class="custom-control custom-checkbox small">
@@ -25,24 +24,15 @@
                                                     id="exampleInputEmail" aria-describedby="emailHelp"
                                                     placeholder="Digite seu e-mail">
                                             </div>
-                                            <div class="form-group">
-                                                <input type="password" class="form-control form-control-user"
-                                                    id="exampleInputPassword" placeholder="Digite sua senha">
-                                            </div>
-                                            <div class="form-group">
-                                                <div class="custom-control custom-checkbox small">
-                                                    <input type="checkbox" class="custom-control-input"
-                                                        id="customCheck">
-                                                </div>
-                                            </div>
-                                            <a href="/home" class="btn btn-primary btn-user btn-block">
-                                                ENTRAR
+                                            <a href="index.html" class="btn btn-primary btn-user btn-block">
+                                                RECUPERAR
                                             </a>
 
                                         </form>
                                         <div class="mt-2" style="float:right;">
-                                            <a class="small" href="/forgot-password"><i class="fa fa-paper-plane me-1"></i>Esqueci minha senha</a>
+                                            <a class="small" href="/login"><i class="fa fa-reply me-1"></i>Voltar à página de login</a>
                                         </div>
+                                        
                                     </div>
                                 </div>
                             </div>
