--- a/VaccineC/src/app/shared/components/side-menu/side-menu.component.html
+++ b/VaccineC/src/app/shared/components/side-menu/side-menu.component.html
@@ -1,91 +1,101 @@
-<ul class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion" id="accordionSidebar">
+<ul class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion {{is_toggled}}" id="accordionSidebar">
 
     <!-- Sidebar - Brand -->
-    <a class="sidebar-brand d-flex align-items-center" href="#">
-        <div class="sidebar-brand-icon o-hidden">
-            <img id="logo" src="../../../assets/img/menu-expanded-logo.png"
-            style="height: 70px;width: 125px;margin-left: 1.5rem;">
+    <div>
+        <a href='/home' class="sidebar-brand d-flex align-items-center">
+            <div class="sidebar-brand-icon o-hidden">
+                <img id="logo" src="../../../assets/img/menu-expanded-logo.png"
+                    style="height: 70px;width: 125px;margin-left: 1.5rem;">
+            </div>
+        </a>
+
+        <!-- Divider -->
+        <hr class="sidebar-divider">
+
+        <!-- Heading -->
+        <div class="sidebar-heading">
+            RECURSOS
         </div>
-    </a>
 
-    <!-- Divider -->
-    <hr class="sidebar-divider">
+        <!-- Nav Item - Pages Collapse Menu -->
+        <li class="nav-item">
+            <a class="nav-link collapsed" href="/home" data-toggle="collapse" data-target="#collapseRegistration"
+                aria-expanded="false" aria-controls="collapseRegistration">
+                <i class="fas fa-fw fa-address-card resource-icon"></i>
+                <span>CADASTROS</span>
+            </a>
+            <div id="collapseRegistration" class="collapse" aria-labelledby="headingRegistration"
+                data-parent="#accordionSidebar">
+                <div class="bg-white py-2 collapse-inner rounded">
+                    <a class="collapse-item" href="/formas-pagamento">FORMAS PAGAMENTO</a>
+                    <a class="collapse-item" href="#">OCUPAÇÕES</a>
+                    <a class="collapse-item" href="#">PESSOAS</a>
+                    <a class="collapse-item" href="#">PRESTADORES</a>
+                    <a class="collapse-item" href="#">PRODUTO</a>
+                </div>
+            </div>
+        </li>
 
-    <!-- Heading -->
-    <div class="sidebar-heading">
-        RECURSOS
+        <li class="nav-item">
+            <a class="nav-link collapsed" href="/home" data-toggle="collapse" data-target="#collapseOperational"
+                aria-expanded="false" aria-controls="collapseOperational">
+                <i class="fas fa-fw fa-hand-holding-medical resource-icon"></i>
+                <span>OPERACIONAL</span>
+            </a>
+            <div id="collapseOperational" class="collapse" aria-labelledby="headingOperational"
+                data-parent="#accordionSidebar">
+                <div class="bg-white py-2 collapse-inner rounded">
+                    <a class="collapse-item" href="#">AGENDAMENTO</a>
+                    <a class="collapse-item" href="#">APLICAÇÃO</a>
+                    <a class="collapse-item" href="#">ORÇAMENTOS</a>
+                </div>
+            </div>
+        </li>
+
+        <li class="nav-item">
+            <a class="nav-link collapsed" href="/home" data-toggle="collapse" data-target="#collapseInventory"
+                aria-expanded="false" aria-controls="collapseInventory">
+                <i class="fas fa-fw fa-box-open resource-icon"></i>
+                <span>ESTOQUE</span>
+            </a>
+            <div id="collapseInventory" class="collapse" aria-labelledby="headingInventory"
+                data-parent="#accordionSidebar">
+                <div class="bg-white py-2 collapse-inner rounded">
+                    <a class="collapse-item" href="#">COMPRAR OU VENDER</a>
+                    <a class="collapse-item" href="#">SITUAÇÃO ESTOQUE</a>
+                </div>
+            </div>
+        </li>
+
+        <li class="nav-item">
+            <a class="nav-link collapsed" href="/home" data-toggle="collapse" data-target="#collapseUser"
+                aria-expanded="false" aria-controls="collapseUser">
+                <i class="fas fa-fw fa-users resource-icon"></i>
+                <span>USUÁRIOS</span>
+            </a>
+            <div id="collapseUser" class="collapse" aria-labelledby="headingUser" data-parent="#accordionSidebar">
+                <div class="bg-white py-2 collapse-inner rounded">
+                    <a class="collapse-item" href="#">GERENCIAR USUÁRIOS</a>
+                    <a class="collapse-item" href="#">PERFIS</a>
+                </div>
+            </div>
+        </li>
     </div>
-
-    <!-- Nav Item - Pages Collapse Menu -->
-    <li class="nav-item active">
-        <a class="nav-link" href="#" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="true"
-            aria-controls="collapseTwo">
-            <i class="fas fa-fw fa-address-card resource-icon"></i>
-            <span>CADASTROS</span>
-        </a>
-        <div id="collapseTwo" class="collapse show" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
-            <div class="bg-white py-2 collapse-inner rounded">
-                <a class="collapse-item" href="#">PESSOA</a>
-                <a class="collapse-item" href="#">PRESTADOR</a>
-            </div>
+    <div>
+        <!-- Divider -->
+        <hr class="sidebar-divider d-none d-md-block">
+        <!-- Heading -->
+        <div class="sidebar-heading">
+            LOGOUT
         </div>
-    </li>
-
-    <li class="nav-item">
-        <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseUtilities"
-            aria-expanded="true" aria-controls="collapseUtilities">
-            <i class="fas fa-fw fa-hand-holding-medical resource-icon"></i>
-            <span>OPERACIONAL</span>
-        </a>
-        <div id="collapseUtilities" class="collapse" aria-labelledby="headingUtilities" data-parent="#accordionSidebar">
-            <div class="bg-white py-2 collapse-inner rounded">
-                <h6 class="collapse-header">Custom Utilities:</h6>
-                <a class="collapse-item" href="#">Colors</a>
-                <a class="collapse-item" href="#">Borders</a>
-                <a class="collapse-item" href="#">Animations</a>
-                <a class="collapse-item" href="#">Other</a>
-            </div>
-        </div>
-    </li>
-
-    <li class="nav-item">
-        <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseUtilities"
-            aria-expanded="true" aria-controls="collapseUtilities">
-            <i class="fas fa-fw fa-box-open resource-icon"></i>
-            <span>ESTOQUE</span>
-        </a>
-        <div id="collapseUtilities" class="collapse" aria-labelledby="headingUtilities" data-parent="#accordionSidebar">
-            <div class="bg-white py-2 collapse-inner rounded">
-                <h6 class="collapse-header">Custom Utilities:</h6>
-                <a class="collapse-item" href="#">Colors</a>
-                <a class="collapse-item" href="#">Borders</a>
-                <a class="collapse-item" href="#">Animations</a>
-                <a class="collapse-item" href="#">Other</a>
-            </div>
-        </div>
-    </li>
-
-    <li class="nav-item">
-        <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseUtilities"
-            aria-expanded="true" aria-controls="collapseUtilities">
-            <i class="fas fa-fw fa-users resource-icon"></i>
-            <span>USUÁRIOS</span>
-        </a>
-        <div id="collapseUtilities" class="collapse" aria-labelledby="headingUtilities" data-parent="#accordionSidebar">
-            <div class="bg-white py-2 collapse-inner rounded">
-                <h6 class="collapse-header">Custom Utilities:</h6>
-                <a class="collapse-item" href="#">Colors</a>
-                <a class="collapse-item" href="#">Borders</a>
-                <a class="collapse-item" href="#">Animations</a>
-                <a class="collapse-item" href="#">Other</a>
-            </div>
-        </div>
-    </li>
-
-    <!-- Divider -->
-    <hr class="sidebar-divider d-none d-md-block">
-
+        <li class="nav-item">
+            <a class="nav-link collapsed" href="/login">
+                <i class="fas fa-fw fa-power-off resource-icon"></i>
+                <span>SAIR</span>
+            </a>
+        </li>
+    </div>
 </ul>
-<div class="is-handle-expanded">
-    <span class="is-icon-type-expanded fas fa-chevron-left"></span>
+<div class="is-handle-expanded" id="sidebarToggle" (click)="toggleSideNav()">
+    <span class="is-icon-type-expanded"></span>
 </div>
