--- a/VaccineC/src/app/shared/components/side-menu/side-menu.component.scss
+++ b/VaccineC/src/app/shared/components/side-menu/side-menu.component.scss
@@ -4,14 +4,44 @@
     position: fixed;
     z-index: 20;
     transition: width 0.3s;
+    display: flex;
+    justify-content: space-between;
     box-shadow: 0 0.375rem 0.75rem rgb(140 152 164 / 60%);
+}
+
+#accordionSidebar~#sidebarToggle::after {
+    content: '\f104';
+    font-family: 'Font Awesome 6 Free';
+    font-weight: 900;
+}
+
+#accordionSidebar.toggled~#sidebarToggle::after {
+    content: '\f105';
+    font-family: 'Font Awesome 6 Free';
+    font-weight: 900;
+}
+
+#accordionSidebar.toggled div a div #logo {
+    content: url(../../../../assets/img/menu-logo.png);
+    height: 35px !important;
+    width: 30px !important;
+    margin-left: 1rem !important;
+}
+
+#accordionSidebar.toggled div li a i {
+    margin-right: 0px !important;
+}
+
+#sidebarToggle.withdrawn {
+    top: 0.4em;
+    left: 5.25em;
 }
 
 .resource-icon {
     margin-right: 0.5rem !important;
 }
 
-.is-handle-expanded {
+#sidebarToggle {
     position: fixed;
     top: 0.8em;
     z-index: 40;
@@ -30,15 +60,8 @@
 }
 
 @media (max-width: 1366px) {
-    .is-handle-expanded {
+    #sidebarToggle {
         top: 0.4em;
-    }
-}
-
-@media (max-width: 768px) {
-    .is-handle-expanded {
-        top: 0.4em;
-        left: 5.25em;
     }
 }
 
@@ -49,4 +72,19 @@
         width: 30px !important;
         margin-left: 1rem !important;
     }
+
+    #sidebarToggle {
+        display: none !important;
+    }
+
+    #accordionSidebar div li a i {
+        margin-right: 0px !important;
+    }
+
+    #sidebarToggle::after {
+        content: '\f105' !important;
+        font-family: 'Font Awesome 6 Free';
+        font-weight: 900;
+    }
+
 }
