--- a/VaccineC/src/app/shared/components/toolbar/toolbar.component.html
+++ b/VaccineC/src/app/shared/components/toolbar/toolbar.component.html
@@ -96,7 +96,7 @@
             <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button" data-toggle="dropdown"
                 aria-haspopup="true" aria-expanded="false">
                 <span class="mr-2 d-none d-lg-inline text-gray-600 small">Usuário Exemplo</span>
-                <i class="fas fa-user-circle" style="font-size: 30px;"></i>
+                <img class="img-profile rounded-circle" src="../../../../assets/img/undraw_profile_3.svg">    
             </a>
             <!-- Dropdown - User Information -->
             <div class="dropdown-menu dropdown-menu-right shadow animated--grow-in" aria-labelledby="userDropdown">
