--- a/VaccineC/src/app/styles/css/style-global.css
+++ b/VaccineC/src/app/styles/css/style-global.css
@@ -37,6 +37,9 @@
   --breakpoint-md: 768px;
   --breakpoint-lg: 992px;
   --breakpoint-xl: 1200px;
+  --cor-produto: #0077b6;
+  --cor-btn-primary-produto: #5099dd;
+  --cor-placeholder-produto: #c9c9c9;
   --font-family-sans-serif: "Nunito", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   --font-family-monospace: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
 }
@@ -173,13 +176,13 @@ sup {
 }
 
 a {
-  color: #4e73df;
+  color: var(--cor-btn-primary-produto);
   text-decoration: none;
   background-color: transparent;
 }
 
 a:hover {
-  color: #224abe;
+  color: #2653d4;
   text-decoration: underline;
 }
 
@@ -2694,8 +2697,8 @@ fieldset:disabled a.btn {
 
 .btn-primary {
   color: #fff;
-  background-color: #5099dd;
-  border-color: #5099dd;
+  background-color: var(--cor-btn-primary-produto);
+  border-color: var(--cor-btn-primary-produto);
 }
 
 .btn-primary:hover {
@@ -11634,11 +11637,6 @@ a:focus {
 
 .sidebar #sidebarToggle:focus {
   outline: none;
-}
-
-.sidebar.toggled {
-  width: 0 !important;
-  overflow: hidden;
 }
 
 .sidebar.toggled #sidebarToggle::after {
