--- a/VaccineC/src/app/shared/components/toolbar/toolbar.component.scss
+++ b/VaccineC/src/app/shared/components/toolbar/toolbar.component.scss
@@ -19,6 +19,11 @@
   margin-left: 6.5em;
 }
 
+.dropdown-header {
+  background-color: var(--cor-btn-primary-produto) !important;
+  border-color: var(--cor-btn-primary-produto) !important;
+}
+
 @media (max-width: 768px) {
   #home-topbar {
     width: calc(100% - 6.5em);
