--- a/VaccineC/src/app/shared/components/toolbar/toolbar.component.html
+++ b/VaccineC/src/app/shared/components/toolbar/toolbar.component.html
@@ -59,7 +59,7 @@
                     </div>
                     <div>
                         <div class="small-text">Agosto 12, 2022</div>
-                        <span class="font-weight-bold text-gray-600">O lote A1B2C3 está para vencer em
+                        <span class="text-gray-600">O lote A1B2C3 está para vencer em
                             25/08/2022!</span>
                     </div>
                 </a>
@@ -98,7 +98,7 @@
 
                     <div class="dropdown-divider"></div>
 
-                    <a class="dropdown-item text-gray-600" href="#">
+                    <a class="dropdown-item text-gray-600" href="/login">
                         <i class="fas fa-sign-out-alt fa-sm fa-fw mr-2"></i>
                         Sair
                     </a>
