Criação dos demais componentes

--- a/VaccineC/src/app/pages/produto/produto.component.html
+++ b/VaccineC/src/app/pages/produto/produto.component.html
@@ -2,6 +2,6 @@
     <app-side-menu></app-side-menu>
     <div id="content-wrapper" class="d-flex flex-column">
         <app-toolbar></app-toolbar>
-        <app-container titulo="Formas Pagamento" caminho="Cadastros / Formas Pagamento"></app-container>
+        <app-container titulo="Produto" caminho="Cadastros / Produto"></app-container>
     </div>
 </div>
