--- a/VaccineC/src/app/shared/components/container/container.component.html
+++ b/VaccineC/src/app/shared/components/container/container.component.html
@@ -2,8 +2,8 @@
     <div class="flex-1 is-content">
         <div class="is-section-datail-header">
             <div class="d-flex is-container-header-section">
-                <h1 class="is-section-detail-header-title" id="title">Título</h1>
-                <div class="is-path-page" title="Caminho no Sistema">( Caminho / Caminho )</div>
+                <h1 class="is-section-detail-header-title" id="title">{{titulo}}</h1>
+                <div class="is-path-page">( {{caminho}} )</div>
             </div>
         </div>
         <div class="is-section-content">
