--- a/VaccineC/src/app/shared/components/side-menu/side-menu.component.html
+++ b/VaccineC/src/app/shared/components/side-menu/side-menu.component.html
@@ -31,10 +31,10 @@
                 data-parent="#accordionSidebar" (expands)="expands()" (collapses)="collapses()">
                 <div class="bg-white py-2 collapse-inner rounded">
                     <a class="collapse-item" href="/formas-pagamento">FORMAS PAGAMENTO</a>
-                    <a class="collapse-item" href="#">OCUPAÇÕES</a>
-                    <a class="collapse-item" href="#">PESSOAS</a>
-                    <a class="collapse-item" href="#">PRESTADORES</a>
-                    <a class="collapse-item" href="#">PRODUTO</a>
+                    <a class="collapse-item" href="/ocupacoes">OCUPAÇÕES</a>
+                    <a class="collapse-item" href="/pessoas">PESSOAS</a>
+                    <a class="collapse-item" href="/prestadores">PRESTADORES</a>
+                    <a class="collapse-item" href="/produto">PRODUTO</a>
                 </div>
             </div>
         </li>
@@ -51,9 +51,9 @@
             <div id="collapseOperational" [collapse]="isCollapsedOperational" [isAnimated]="true"
                 data-parent="#accordionSidebar">
                 <div class="bg-white py-2 collapse-inner rounded">
-                    <a class="collapse-item" href="#">AGENDAMENTO</a>
-                    <a class="collapse-item" href="#">APLICAÇÃO</a>
-                    <a class="collapse-item" href="#">ORÇAMENTOS</a>
+                    <a class="collapse-item" href="/agendamento">AGENDAMENTO</a>
+                    <a class="collapse-item" href="/aplicacao">APLICAÇÃO</a>
+                    <a class="collapse-item" href="/orcamentos">ORÇAMENTOS</a>
                 </div>
             </div>
         </li>
@@ -69,8 +69,8 @@
             <div id="collapseInventory" [collapse]="isCollapsedInventory" [isAnimated]="true"
                 data-parent="#accordionSidebar">
                 <div class="bg-white py-2 collapse-inner rounded">
-                    <a class="collapse-item" href="#">COMPRAR OU VENDER</a>
-                    <a class="collapse-item" href="#">SITUAÇÃO ESTOQUE</a>
+                    <a class="collapse-item" href="/comprar-vender">COMPRAR OU VENDER</a>
+                    <a class="collapse-item" href="/situacao-estoque">SITUAÇÃO ESTOQUE</a>
                 </div>
             </div>
         </li>
@@ -85,8 +85,8 @@
             </div>
             <div id="collapseUser" [collapse]="isCollapsedUser" [isAnimated]="true" data-parent="#accordionSidebar">
                 <div class="bg-white py-2 collapse-inner rounded">
-                    <a class="collapse-item" href="#">GERENCIAR USUÁRIOS</a>
-                    <a class="collapse-item" href="#">PERFIS</a>
+                    <a class="collapse-item" href="/gerenciar-usuarios">GERENCIAR USUÁRIOS</a>
+                    <a class="collapse-item" href="/perfis">PERFIS</a>
                 </div>
             </div>
         </li>
