--- a/VaccineC/src/app/pages/perfis/perfis.component.html
+++ b/VaccineC/src/app/pages/perfis/perfis.component.html
@@ -2,6 +2,6 @@
     <app-side-menu></app-side-menu>
     <div id="content-wrapper" class="d-flex flex-column">
         <app-toolbar></app-toolbar>
-        <app-container titulo="Formas Pagamento" caminho="Cadastros / Formas Pagamento"></app-container>
+        <app-container titulo="Perfis" caminho="Usuários / Perfis"></app-container>
     </div>
 </div>
