--- a/VaccineC/src/app/styles/css/style-global.css
+++ b/VaccineC/src/app/styles/css/style-global.css
@@ -12652,3 +12652,24 @@ body.sidebar-toggled footer.sticky-footer {
   font-size: 80% !important;
   font-weight: 400 !important;
 }
+
+.is-content {
+  padding: 5.5rem;
+  padding-bottom: 0;
+  display: flex;
+  flex: 1;
+  flex-direction: column;
+}
+
+.is-card {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  min-width: 0;
+  word-wrap: break-word;
+  background-color: #fff;
+  background-clip: border-box;
+  border: 0.0625rem solid rgba(231, 234, 243, .7);
+  border-radius: 0.75rem;
+  box-shadow: 0 0.375rem 0.75rem rgb(140 152 164 / 8%);
+}
